# pdf-editor

./: .gitignore  .mcp.json  Create Release Zip.command  GITHUB_RELEASE_TEMPLATE.md  GITHUB_REPO_DESCRIPTION.txt  LICENSE  Launch PDF Editor.command  README.md  RELEASE_NOTES_v0.1.0.md  Setup PDF Editor.command  pyproject.toml
docs/: RELEASING.md
pdf_editor/: __main__.py  app.py  mcp_server.py
skills/pdf-editor-cli/: SKILL.md
tests/: test_app.py
