[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-editor-cli"
version = "0.2.1"
description = "Interactive PDF split-and-merge CLI for macOS workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypdf>=6.0.0",
]

[project.scripts]
pdf-editor = "pdf_editor.__main__:main"

[tool.setuptools]
packages = ["pdf_editor"]
